text visual overflow fix

--- a/src/pages/generico_lista/main.scss
+++ b/src/pages/generico_lista/main.scss
@@ -22,4 +22,7 @@ page-lista {
     ion-card-header {
         font-weight: bold;
     }
+    .posTextoPequeno {
+        font-size: 70%;
+    }
 }
